--- a/MC-Enchant-Order/index.html
+++ b/MC-Enchant-Order/index.html
@@ -160,7 +160,7 @@
 	<hr>
 	<button id="calc">Calculate</button><br><br>
 	Cost: <span id="cost">0</span><br><br>
-	<u>Resulting item:</u><br><span id="res"></span><br><br>
-	<table id="restbl"><tr></tr></table>
+	<!--<u>Resulting item:</u><br><span id="res"></span><br><br>-->
+	<table id="restbl"></table>
 </body>
 </html>
