Added incompatibility checks (also for trident)

--- a/MC-Enchant-Order/index.html
+++ b/MC-Enchant-Order/index.html
@@ -140,9 +140,9 @@
 		</div>-->
 		<button id="add-item">Add Item</button>
 	</section>
-	<!--<hr>
-	<section id="want"><h3>What you want:</h3>
-		Item Type: <select class="sel-item-`+id+`">
+	<hr>
+	<section id="want"><h3>In case of incompatible enchantments, choose which you want to keep:</h3>
+		<!--Item Type: <select class="sel-item-`+id+`">
 			<option value="0">Enchanted Book</option>
 			<option value="1">Sword</option>
 			<option value="2">Bow</option>
@@ -153,10 +153,10 @@
 			<option value="8">Chestplate</option>
 			<option value="9">Pants</option>
 			<option value="10">Boots</option>
-		</select><br>
+		</select><br>-->
 		<button id="add-ench-wanted">Add Enchantment</button>
 		<section id="ench-wanted"></section>
-	</section>-->
+	</section>
 	<hr>
 	<button id="calc">Calculate</button><br><br>
 	Cost: <span id="cost">0</span><br><br>
